Fixed left sidebar inspector gets blurred when query panel is opened (#7032)
* fix :: ui color change for inspector , blur fix

* fix :: blur issue in chrome while zooming out in inspector

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -1818,7 +1818,8 @@ button {
       margin-top: auto;
       margin-bottom: auto;
     }
-    .td-container:has(.action-button){
+
+    .td-container:has(.action-button) {
       height: inherit !important;
     }
   }
@@ -5478,10 +5479,11 @@ div#driver-page-overlay {
   .json-tree-icon-container {
     max-width: 20px;
     margin-right: 6px;
+    font-family: 'IBM Plex Sans';
   }
 
   .node-type {
-    color: #a6b6cc;
+    color: var(--slate11);
     padding-top: 2px;
   }
 
@@ -5491,7 +5493,7 @@ div#driver-page-overlay {
   }
 
   .node-length-color {
-    color: #3650af;
+    color: var(--indigo10);
     padding-top: 3px;
   }
 
@@ -5500,15 +5502,15 @@ div#driver-page-overlay {
   }
 
   .json-tree-node-string {
-    color: #f6820c;
+    color: var(--orange9);
   }
 
   .json-tree-node-boolean {
-    color: #3eb25f;
+    color: var(--green9);
   }
 
   .json-tree-node-number {
-    color: #f4b2b0;
+    color: var(--orange9);
   }
 
   .json-tree-node-null {
@@ -5577,7 +5579,7 @@ div#driver-page-overlay {
   .node-key-outline {
     height: 1rem !important;
     border: 1px solid transparent !important;
-    color: #3e525b;
+    color: var(--slate12);
   }
 }
 
@@ -10748,18 +10750,19 @@ tbody {
   color: var(--amber8);
   border-color: var(--amber3);
 }
+
 .form-label-restricted {
   display: none;
 }
 
 .release-buttons {
   .release-button {
-      padding: 6px 16px;
-      font-size: 14px;
+    padding: 6px 16px;
+    font-size: 14px;
   }
 
   .released-button {
-      background-color:  #F1F3F5;
-      color: #C1C8CD;
+    background-color: #F1F3F5;
+    color: #C1C8CD;
   }
 }
